# holap

holap/exciter/src/: Makefile.am  exciter.c  exciter_ui.cxx  exciter_ui.h  harmonic.c  main_ui.cpp
holap/goomf/: README  configure.in
holap/goomf/data/: Default.goomf
holap/goomf/src/: Makefile.am  analogfilter.c  goomf.c  goomf.h  goomf_ui.cxx  goomf_ui.fl  goomf_ui.h  main_ui.cpp  main_ui.h  synth.c  synthfileio.c  synthvarios.c
holap/harmonizer/: README
holap/harmonizer/src/: Makefile.am  harmonizer.h  holharm.c  holharm_ui.cxx  holharm_ui.fl  holharm_ui.h  main_ui.cpp
holap/harmonizer_l/src/: harmonizer.h  holharm_l.c
holap/horgand-dssi/: configure.in
holap/horgand-dssi/data/: Makefile.am
holap/horgand-dssi/src/: Holrgan.h  Makefile.am  horgand.c  horgand_ui.cxx  horgand_ui.fl  horgand_ui.h  main_ui.cpp  main_ui.h  organ.c  organDSPEffects.c  organFileIO.c  organvarios.c
holap/musicaldelay/: configure.in
holap/musicaldelay/metadata/: Makefile.am
holap/musicaldelay/src/: Makefile.am  mdelay.c  mdelay.h  musicaldelay.c
holap/zynalienwah/: configure.in
holap/zynalienwah/src/: Makefile.am  alienwah.c  alienwah.h  zynalienwah.c
holap/zynchorus/: configure.in
holap/zynchorus/src/: Makefile.am  zynchorus.c
holap/zyneq10band/: configure.in
holap/zyneq3par/: configure.in
holap/zyneq3par/src/: Makefile.am  analogfilter.c  eq.c  zyneq3par.c
holap/zyneq3par/src/.deps/: analogfilter.Plo  eq.Plo  zyneq3par.Plo
holap/zyneq3par/src/.libs/: zyneq3par.lai
holap/zynphaser/: configure.in
holap/zynreverb/: configure.in
(+37 files in other folders)
